serviceforstatefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-stateful-set-0
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    statefulset.kubernetes.io/pod-name: simple-stateful-set-0
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
