servicehelloapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicehelloapp
  namespace: default
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: helloapp
