ingresshelloapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresshelloapp
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: servicehelloapp
            port:
              number: 8080
        path: /helloapp
        pathType: Prefix
